# cloudredirect-moon

./: .gitignore  CMakeLists.txt  Dockerfile.builder  README.md  Version.props  build.sh
cli-dotnet/: SteamDetector.cs
cli-rust/: Cargo.toml
cli-rust/src/: embedded.rs  patcher.rs  signatures.rs  steam_detector.rs
flatpak/: README.md  build.sh  cloudredirect.flatpakrepo  org.cloudredirect.CloudRedirect.desktop  org.cloudredirect.CloudRedirect.metainfo.xml  org.cloudredirect.CloudRedirect.yml
src/: cloud_intercept.cpp
src/common/: app_state.cpp  app_state.h  autocloud_bootstrap.cpp  autocloud_bootstrap.h  autocloud_scan.cpp  autocloud_scan.h  autocloud_util.h  batch_tracker.cpp  batch_tracker.h  bkv_stats.cpp  cli.cpp  cli.h  cloud_metadata_paths.h  cloud_provider.h  cloud_provider_base.cpp  cloud_provider_base.h  cloud_rpc_utils.h  cloud_staging.cpp  cloud_staging.h  cloud_storage.cpp  cloud_storage.h  cloud_work_queue.cpp  cloud_work_queue.h  cr_api.h  file_util.h  json.cpp  json.h  legacy_metadata_cleanup.cpp  legacy_metadata_cleanup.h  local_metadata_store.cpp  local_metadata_store.h  local_storage.cpp  local_storage.h  manifest_store.cpp  manifest_store.h  miniz_export.h  pending_ops_journal.cpp  pending_ops_journal.h  platform.h  protobuf.cpp  (+12 more)
src/platform/linux/: autocloud_path_resolver.h  cloud_hooks.cpp  cloud_hooks.h  cloud_intercept.cpp  cloud_intercept.h  common.h  file_util.cpp  file_util.h  http_server.cpp  http_server.h  http_transport_linux.cpp  http_util.cpp  http_util.h  init.cpp  log.cpp  log.h  platform_linux.cpp  runtime_safety.h  schema_fetch.cpp  token_store_linux.cpp  vtable_hook.cpp  vtable_hook.h  yaml_parser.h
src/platform/win/: cli_main.cpp  cloud_intercept.cpp  cloud_intercept.h  common.h  cr_api.cpp  dllmain.cpp  dpapi_util.h  file_util.h  http_server.cpp  http_server.h  http_transport_win.cpp  http_util.cpp  http_util.h  log.cpp  log.h  platform_win.cpp  token_store_win.cpp
src/providers/: google_drive.cpp  google_drive_provider.h  local_disk_provider.cpp  local_disk_provider.h  onedrive.cpp  onedrive_provider.h
test/: linux_runtime_safety_tests.cpp
ui/: CloudRedirect.csproj
ui-linux/: CMakeLists.txt
ui-linux/dbus/: org.cloudredirect.service.xml
ui-linux/qml/: Main.qml
ui-linux/qml/pages/: AppsPage.qml  BackupsPage.qml  CloudProviderPage.qml  DashboardPage.qml  SetupPage.qml
ui-linux/src/: backend.cpp  backend.h  deployer.cpp  deployer.h  main.cpp  oauthservice.cpp  oauthservice.h  utils.h
ui/Pages/: AppsPage.xaml.cs  CleanupPage.xaml.cs  Cloud760Page.xaml  Cloud760Page.xaml.cs  DashboardPage.xaml.cs  NewsPage.xaml  SettingsPage.xaml  SettingsPage.xaml.cs  SetupPage.xaml  SetupPage.xaml.cs  StatsPage.xaml.cs
ui/Resources/: Strings.es.resx  Strings.pt-BR.resx  Strings.resx  Strings.zh-CN.resx
ui/Resources/payloads/1777411435/: 98134984E2F04775
ui/Services/: AppInfoParser.cs  AppUpdater.cs  CloudCleanup.cs  CloudCleanupRevert.cs  CloudProviderClient.cs  EmbeddedCli.cs  OAuthService.cs  SteamDetector.cs  UiCloudProviderFactory.cs
ui/Services/Patching/: BundledPayload.cs  EmbeddedBundledPayload.cs  Fingerprint.cs  Patcher.cs  Signatures.cs
ui/Services/Providers/: CliUiCloudProvider.cs
ui/Windows/: DisclaimerWindow.xaml.cs
